HADOOP-11363 Hadoop maven surefire-plugin uses must set heap size.